--- a/openapi-templates/typescript-axios/README.mustache
+++ b/openapi-templates/typescript-axios/README.mustache
@@ -13,13 +13,13 @@ A TypeScript client library for interacting with the Open-Bus API.
 ## 📦 Installation
 
 ```bash
-npm install @hasadna/open-bus-api-client
+npm install {{npmName}}
 ````
 
 ## 🔧 Usage
 
 ```ts
-import { Client } from "@hasadna/open-bus-api-client";
+import { Client } from "{{npmName}}";
 
 const client = new Client();
 
